--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start:dev": "nodemon src/index.ts"
+    "start:dev": "nodemon src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
