--- a/dapp/.env.example
+++ b/dapp/.env.example
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=http://localhost:3000
-VITE_TOKEN_ADDRESS=0xcFeb876aB804e1Ce5317fec0d7E458196d2FAE7b
+VITE_BACKEND_URL=http://localhost:8080
+VITE_TOKEN_ADDRESS=
